@@ -1,5 +1,6 @@
 [1.13.6]
 - API Addition: Added JsonValue#toJson that takes a Writer.
+- API Addition: Added getProgrammaticChangeEvents() to scene2d.ui actors that have setProgrammaticChangeEvents.
 
 [1.13.5]
 - [BREAKING CHANGE] Gradle: snapshot builds are now publishes to https://central.sonatype.com/repository/maven-snapshots/. Update your build scripts and the new repository URL. Some of your other snapshot dependencies might still live on OSSRH, so make sure to keep that repository as well.
